tests/NormalTests/paczka1/fuzzy1/34951909.err
Error in line 6: lYp9iJLC A511 54,9
Error in line 7: lYp9iJLC A25 40,3
Error in line 21: 7CMi8lD S213 54,0
Error in line 22: gTVzVD S213 31,1
Error in line 26: S213 A223 45,5
Error in line 36: 7CMi8lD A511 1,86
